syntax = "proto3";

package admin.mm.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "api/admin/mm/v1";

service MMAdminService {
  // Создание мастермайнда
  rpc CreateMM(CreateMMRequest) returns (CreateMMResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/mm"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Создание мастермайнда"};
  }
  // Ручная рассылка ММ
  rpc ManualNotificationMM(ManualNotificationMMRequest) returns (ManualNotificationMMResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/mm/{mm_id}/manual_notification"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Ручная рассылка ММ"};
  }
  // Изменение активности ММ (вкл/выкл)
  rpc ChangeMMActivity(ChangeMMActivityRequest) returns (ChangeMMActivityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/mm/{mm_id}/change_mm_activity"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Изменение активности ММ (вкл/выкл)"};
  }
  // Получение списка мастермайндов
  rpc GetMMList(GetMMListRequest) returns (GetMMListResponse) {
    option (google.api.http) = {get: "/api/v1/admin/mm"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Получение списка мастермайндов"};
  }
  // Создание заказа от геткурса
  rpc CreateGetCourseOrder(CreateGetCourseOrderRequest) returns (CreateGetCourseOrderResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/gk_order/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Создание заказа от геткурса"
      consumes: "application/x-www-form-urlencoded"
      produces: "application/json"
    };
  }
}

message CreateMMRequest {
  string mm_datetime = 1;
  string name = 2;
  string mm_link = 3;
}
message CreateMMResponse {}

message ManualNotificationMMRequest {
  int64 mm_id = 1;
}
message ManualNotificationMMResponse {}

message ChangeMMActivityRequest {
  int64 mm_id = 1;
  bool activity = 2;
}
message ChangeMMActivityResponse {}

message GetMMListRequest {}
message GetMMListResponse {
  repeated Mm mms = 1;

  message Mm {
    int64 mm_id = 1;
    string mm_datetime = 2;
    string name = 3;
    string created_at = 4;
    string status = 5;
    bool activity = 6;
  }
}

message CreateGetCourseOrderRequest {
  string order_id = 1;
  int64 getcource_id = 2;
  string name = 3;
  string position = 4;
}

// position: Клуб MEDBLOGERS 1.2 - 3 месяца
// orderId: 629881974
// getcourceId: 127769936
// name: Максим тест

message CreateGetCourseOrderResponse {}
